# shzgptr

./: Cargo.toml  README.md
src/: main.rs  openai.rs
src/openai/: structs.rs
tests/: cli.rs
