[package]
name = "shzgptr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"

[dev-dependencies]
assert_cmd = "1"
